Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0 , 5.1.1
-
None
-
8850e2eafaba8a6493d3ad5ab584b751eb9a8742
Description
Qt.locale() doesn't require QtQuick, so this enum shouldn't either:
import QtQml 2.1 QtObject { property var blah: Locale.LongFormat }
ReferenceError: Locale is not defined
This may affect other enums requiring QtQuick that have counterparts in QtQml.
Attachments
Issue Links
- is required for
-
QTBUG-32492 QML's Date.toLocaleString() and friends are not documented
-
- Closed
-