Register Locale object in the QtQml namespace.

It was previously registered with QtQuick, which meant QtQuick had to
be imported in order to use Locale; a basic QML object.

Task-number: QTBUG-32505

Change-Id: I9d49cc0d87c0fae07b46885fcdec4f27fb0e0708
Reviewed-by: Alan Alpert <aalpert@blackberry.com>